--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									</a></h2>
 									<p>In this project we did analysis of Chocolate Factory in Excel.</p>
 								</header>
-								<a href="https://github.com/rajankumar656/Data-Analytics-Portfolio-Projects/blob/main/Chocolate_factory_Sales_Project.xlsx" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/rajankumar656/Data-Analytics-Portfolio-Projects/blob/main/Chocolate_factory_Sales_Project.xlsx" class="image main"><img src="images/choco.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/rajankumar656/Data-Analytics-Portfolio-Projects/blob/main/Chocolate_factory_Sales_Project.xlsx" class="button large">View Project</a></li>
 								</ul>
