--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Rajan Portfolio<br />
+						<h1>Rajan's Portfolio<br />
 						</h1>
 						<p>Welcome to my portfolio! I specialize in data analysis using tools like SQL, Excel, Python, Tableau, Power BI, and more. Check out my projects to see how I extract insights and drive impactful results.
 							<a href="www.linkedin.com/in/rajankumar95">@Rajan_Kumar</a>.</p>
