organize and made proper folders

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 		
 						</ul>
 						<ul class="icons">
-
+							<li><a href="https://github.com/rajankumar656" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/rajankumar95/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/rajankumar656/Data-Analytics-Portfolio-Projects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
