Remove Phone and edited address

--- a/index.html
+++ b/index.html
@@ -93,11 +93,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Locaton</h3>
-								<p>Toronto, ON Canada 1A1 1A1</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(123) 456-7890</a></p>
+								<p>Toronto, ON Canada M9P 3R2</p>
 							</section>
 							<section>
 								<h3>Email</h3>
