edited address and remove phone

--- a/index.html
+++ b/index.html
@@ -132,12 +132,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Locaton</h3>
-								<p>1234 Somewhere Road <br />
-								Toronto, ON 12345-67890</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(123) 456-7890</a></p>
+								<p>Toronto, ON M9P 3R2</p>
 							</section>
 							<section>
 								<h3>Email</h3>
