Added tokyo project

--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
 											<li><a href="https://github.com/rajankumar656/Azure-Databricks-CI-CD-with-Azure-DevOps" class="button large">View Project</a></li>
 									</ul>
 								</article>
+								<article class>
+									<header>
+											
+										<h2><a href="https://github.com/rajankumar656/tokyo-olympic-azure-data-engineering-project">Tokyo Olympic Azure Data Engineering Project<br />
+										</a></h2>
+										<a href="https://github.com/rajankumar656/tokyo-olympic-azure-data-engineering-project" class="image main"><img src="images/tokyo.jpeg" alt="" /></a>
+										<p>This project presents an Azure Data Engineering pipeline using Tokyo Olympics data. The workflow includes data ingestion with Azure Data Factory, processing in Azure Databricks, and storage in Azure Data Lake Gen 2. Analyzed data in Azure Synapse Analytics is visualized through Power BI dashboards, showcasing the seamless integration of Azure services for big data processing and visualization.</p>
+									</header>
+									
+									<ul class="actions special">
+											<li><a href="https://github.com/rajankumar656/tokyo-olympic-azure-data-engineering-project" class="button large">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 
